# ciclo8-MISW4406-soluciones-apps-no-monoliticas

./: .coveragerc  .gitignore  .gitpod.yml  Ciclo 8 no monoliticas.postman_collection.json  Dockerfile  Entrega 3.postman_collection.json  Entrega Semana 4.postman_collection.json  Makefile  README.md  docker-compose-db.yml  docker-compose.yml  gestionclientes.Dockerfile  integracionpagos.Dockerfile  pyproject.toml  requirements.txt  sql_integracionpagos.db-journal
.github/workflows/: pull-request-actions.yml
kubernetes/: saludtech-ingress.yaml
kubernetes/bff/: bff-deployment.yaml  bff-service.yaml
kubernetes/gestionclientes/: db-clientes-deployment.yaml  db-clientes-service.yaml  ms-gestionclientes-deployment.yaml  ms-gestionclientes-service.yaml
kubernetes/integracionpagos/: db-pagos-deployment.yaml  db-pagos-service.yaml  ms-integracionpagos-deployment.yaml
kubernetes/notificaciones/: db-notificaciones-deployment.yaml  db-notificaciones-service.yaml  ms-notificaciones-deployment.yaml  ms-notificaciones-service.yaml
src/aeroalpes/api/: __init__.py  clientes.py
src/aeroalpes/config/: db.py
src/aeroalpes/ejemplos/: servicio_busqueda.py  servicios.py
src/bff_web/: main.py
src/gestionclientes/: __init__.py
src/gestionclientes/api/: __init__.py  clientes.py  facturacion.py
src/gestionclientes/config/: db.py
src/gestionclientes/ejemplos/: entidad.py  servicios.py
src/integracionpagos/: main.py
src/integracionpagos/api/: __init__.py  pagos.py
src/integracionpagos/config/: db.py  uow.py
src/notificaciones/api/: __init__.py  notificacion.py
(+175 files in other folders)
