[project]
name = "aeroalpes"
version = "1.0.0"
authors = [
  { name="Equipo Monoliticas", email="" },
]
description = "Proyecto de ejemplo de AeroAlpes"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]